--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-spring.application.name=gestion-estudiantes
+spring.application.name=gestion-estudiantes 
+
+server.port=8080 
+
+# Configuración de la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/gestion_estudiantes?useSSL=false&serverTimezone=UTC 
+
+spring.datasource.username=root 
+spring.datasource.password=root 
+
+# CONFIGURACIÓN JPA / HIBERNATE # update: crea las tablas si no existen y actualiza su estructura sin borrar datos
+spring.jpa.hibernate.ddl-auto=update 
+# Muestra en la consola las consultas SQL que Hibernate ejecuta # Útil para depuración y aprendizaje
+spring.jpa.show-sql=true 
+# Indica el dialecto de la base de datos que usará Hibernate\
+
+# Permite generar SQL compatible con MySQL 8
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
