--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+# Frontend
+# Frontend
+frontend-estudiantes/node_modules/
+frontend-estudiantes/dist/
+
 ### STS ###
 .apt_generated
 .classpath
