--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 # Indica el dialect de la base de dates que usará Hibernate
 
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
 # Permite generar SQL compatible con MySQL 8
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
