--- a/frontend-estudiantes/package.json
+++ b/frontend-estudiantes/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.3.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
